refactor: 消除代码重复并修复资源泄漏